ADD: analysis dev

--- a/SENSOR_SPACE_ERF_RESTRTICTED_CH.ipynb
+++ b/SENSOR_SPACE_ERF_RESTRTICTED_CH.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,12 +15,14 @@
     "from mpl_toolkits.axes_grid1 import make_axes_locatable\n",
     "from mne.viz import plot_topomap\n",
     "from mne.viz import plot_compare_evokeds\n",
+    "from operator import itemgetter \n",
+    "\n",
     "%matplotlib qt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -121,7 +123,7 @@
     "    print(participant_files)\n",
     "    for i in participant_files:\n",
     "        epochs = mne.read_epochs(i, preload=True)\n",
-    "        epochs = epochs.pick_types(meg=True, ref_meg=False, eog=False)\n",
+    "        epochs = epochs.pick_types(selection=[i for i in epochs.info[\"ch_names\"] if \"O\" in i])\n",
     "        epochs = epochs.apply_baseline((-0.1, 0.0))\n",
     "        epochs = epochs.apply_baseline((1.6, 2.6))\n",
     "        reg = epochs[\"30\"].average(method=trim)\n",
@@ -135,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,31 +176,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "info = mne.io.read_info('/cubric/scratch/c1557187/act_mis/MEG/0043/new_v1/epochs-TD-001-epo.fif')\n",
     "present_ch_names = info[\"ch_names\"]\n",
     "present_ch_names = [i[:5] for i in present_ch_names]\n",
+    "present_ch_names = [i for i in present_ch_names if \"O\" in i]\n",
     "full_connectivity, full_ch_names = mne.channels.find_ch_connectivity(\n",
     "    info,\n",
     "    ch_type=\"mag\"\n",
     ")\n",
     "\n",
-    "sensor_ix = list(range(len(full_ch_names)))\n",
-    "channel_off = list(set(full_ch_names) - set(present_ch_names))[0]\n",
-    "sensor_ix.remove(full_ch_names.index(channel_off))\n",
+    "both = set(full_ch_names).intersection(present_ch_names)\n",
+    "indices_full = [full_ch_names.index(x) for x in both]\n",
+    "indices_present = [present_ch_names.index(x) for x in both]\n",
+    "indices_present.sort()\n",
     "\n",
     "connectivity, ch_names = mne.channels.read_ch_connectivity(\n",
     "    fname=\"ctf275\",\n",
-    "    picks=sensor_ix\n",
+    "    picks=indices_full\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,16 +211,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "stat_fun(H1): min=0.000000 max=16.324342\n",
+      "stat_fun(H1): min=0.000000 max=8.043818\n",
       "Running initial clustering\n",
-      "Found 127 clusters\n",
+      "Found 81 clusters\n",
       "Permuting 999 times...\n",
       "[                                        ]   0.00%  |   \n",
       "Computing cluster p-values\n",
@@ -240,38 +244,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[86 87]\n",
+      "[48]\n",
       "[1.    1.    1.    1.    1.    1.    1.    1.    1.    1.    1.    1.\n",
       " 1.    1.    1.    1.    1.    1.    1.    1.    1.    1.    1.    1.\n",
       " 1.    1.    1.    1.    1.    1.    1.    1.    1.    1.    1.    1.\n",
       " 1.    1.    1.    1.    1.    1.    1.    1.    1.    1.    1.    1.\n",
+      " 0.999 1.    1.    1.    1.    1.    1.    1.    1.    1.    1.    1.\n",
       " 1.    1.    1.    1.    1.    1.    1.    1.    1.    1.    1.    1.\n",
-      " 1.    1.    1.    1.    1.    1.    1.    1.    1.    1.    1.    1.\n",
-      " 1.    1.    1.    1.    1.    1.    1.    1.    1.    1.    1.    1.\n",
-      " 1.    1.    0.907 0.896 1.    1.    1.    1.    1.    1.    1.    1.\n",
-      " 1.    1.    1.    1.    1.    1.    1.    1.    1.    1.    0.998 1.\n",
-      " 1.    1.    1.    1.    1.    1.    1.    1.    1.    1.    1.    1.\n",
-      " 1.    1.    1.    1.    1.    1.    1.   ]\n"
+      " 1.    1.    1.    1.    1.    1.    1.    1.    1.   ]\n"
      ]
     }
    ],
    "source": [
     "T_obs, clusters, p_values, _ = cluster_stats\n",
-    "good_cluster_inds = np.where(p_values < 0.99)[0]\n",
+    "good_cluster_inds = np.where(p_values < 1)[0]\n",
     "print(good_cluster_inds)\n",
     "print(p_values)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -282,19 +282,13 @@
        "       1.   , 1.   , 1.   , 1.   , 1.   , 1.   , 1.   , 1.   , 1.   ,\n",
        "       1.   , 1.   , 1.   , 1.   , 1.   , 1.   , 1.   , 1.   , 1.   ,\n",
        "       1.   , 1.   , 1.   , 1.   , 1.   , 1.   , 1.   , 1.   , 1.   ,\n",
+       "       1.   , 1.   , 1.   , 0.999, 1.   , 1.   , 1.   , 1.   , 1.   ,\n",
        "       1.   , 1.   , 1.   , 1.   , 1.   , 1.   , 1.   , 1.   , 1.   ,\n",
        "       1.   , 1.   , 1.   , 1.   , 1.   , 1.   , 1.   , 1.   , 1.   ,\n",
-       "       1.   , 1.   , 1.   , 1.   , 1.   , 1.   , 1.   , 1.   , 1.   ,\n",
-       "       1.   , 1.   , 1.   , 1.   , 1.   , 1.   , 1.   , 1.   , 1.   ,\n",
-       "       1.   , 1.   , 1.   , 1.   , 1.   , 0.907, 0.896, 1.   , 1.   ,\n",
-       "       1.   , 1.   , 1.   , 1.   , 1.   , 1.   , 1.   , 1.   , 1.   ,\n",
-       "       1.   , 1.   , 1.   , 1.   , 1.   , 1.   , 1.   , 0.998, 1.   ,\n",
-       "       1.   , 1.   , 1.   , 1.   , 1.   , 1.   , 1.   , 1.   , 1.   ,\n",
-       "       1.   , 1.   , 1.   , 1.   , 1.   , 1.   , 1.   , 1.   , 1.   ,\n",
-       "       1.   ])"
+       "       1.   , 1.   , 1.   , 1.   , 1.   , 1.   , 1.   , 1.   , 1.   ])"
       ]
      },
-     "execution_count": 149,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,95 +299,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
+    "epochs = mne.read_epochs('/cubric/scratch/c1557187/act_mis/MEG/0043/new_v1/epochs-TD-001-epo.fif')\n",
+    "epochs = epochs.pick_types(selection=[i for i in epochs.info[\"ch_names\"] if \"O\" in i])\n",
+    "info = epochs.info"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(41, 4)"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "pos = mne.find_layout(info).pos\n",
-    "pos = np.delete(pos, full_ch_names.index(channel_off), axis=0)"
+    "indices_full.sort()\n",
+    "pos = pos[indices_full]\n",
+    "pos.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<Info | 23 non-empty fields\n",
-       "    bads : list | 0 items\n",
-       "    ch_names : list | MLC11-3305, MLC12-3305, MLC13-3305, MLC14-3305, ...\n",
-       "    chs : list | 274 items (MAG: 274)\n",
-       "    comps : list | 5 items\n",
-       "    ctf_head_t : Transform | 3 items\n",
-       "    custom_ref_applied : bool | False\n",
-       "    dev_ctf_t : Transform | 3 items\n",
-       "    dev_head_t : Transform | 3 items\n",
-       "    dig : list | 516 items\n",
-       "    events : list | 0 items\n",
-       "    experimenter : str | 3 items\n",
-       "    file_id : dict | 4 items\n",
-       "    highpass : float | 0.10000000149011612 Hz\n",
-       "    hpi_meas : list | 0 items\n",
-       "    hpi_results : list | 1 items\n",
-       "    lowpass : float | 30.0 Hz\n",
-       "    meas_date : tuple | 2019-05-31 11:24:00 GMT\n",
-       "    meas_id : dict | 4 items\n",
-       "    nchan : int | 274\n",
-       "    proc_history : list | 0 items\n",
-       "    projs : list | 0 items\n",
-       "    sfreq : float | 250.0 Hz\n",
-       "    subject_info : dict | 1 items\n",
-       "    acq_pars : NoneType\n",
-       "    acq_stim : NoneType\n",
-       "    description : NoneType\n",
-       "    gantry_angle : NoneType\n",
-       "    hpi_subsystem : NoneType\n",
-       "    kit_system_id : NoneType\n",
-       "    line_freq : NoneType\n",
-       "    proj_id : NoneType\n",
-       "    proj_name : NoneType\n",
-       "    xplotter_layout : NoneType\n",
-       ">"
-      ]
-     },
-     "execution_count": 151,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "info = mne.io.read_info('/cubric/scratch/c1557187/act_mis/MEG/0043/new_v1/epochs-TD-001-epo.fif')\n",
-    "info[\"chs\"] = info[\"chs\"][29:-2]\n",
-    "info[\"ch_names\"] = info[\"ch_names\"][29:-2]\n",
-    "info[\"nchan\"] = 274\n",
-    "info"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 157,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "41"
-      ]
-     },
-     "execution_count": 157,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len([i for i in info[\"ch_names\"] if \"O\" in i])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -405,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
