--- a/SENSOR_SPACE_ERF_RESTRTICTED_CH.ipynb
+++ b/SENSOR_SPACE_ERF_RESTRTICTED_CH.ipynb
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -384,7 +384,8 @@
     "    ax_signals.fill_betweenx((ymin, ymax), sig_times[0], sig_times[-1],\n",
     "                             color='orange', alpha=0.3)\n",
     "    mne.viz.tight_layout(fig=fig)\n",
-    "    fig.subplots_adjust(bottom=.05)"
+    "    fig.subplots_adjust(bottom=.05)\n",
+    "    plt.show()"
    ]
   },
   {
