ADD: source estimation

--- a/SINGLE_PP_SOURCE.ipynb
+++ b/SINGLE_PP_SOURCE.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,30 +27,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "main_path = op.join(\"/cubric\", \"scratch\", \"c1557187\", \"act_mis\")\n",
-    "meg_path = op.join(main_path, \"MEG\")"
+    "meg_path = op.join(main_path, \"MEG\")\n",
+    "fs_path = \"/cubric/scratch/c1557187/MRI_337/FS_OUTPUT\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "participants = files.get_folders_files(meg_path, wp=False)[0]\n",
     "participants.sort()\n",
@@ -60,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,8 +65,183 @@
    "outputs": [],
    "source": [
     "all_epochs = files.get_files(pp_path, \"epochs-TD\", \"-epo.fif\")[2]\n",
-    "fwd_solution ="
+    "all_epochs.sort()\n",
+    "fwd_solution = files.get_files(pp_path, \"\", \"-fwd.fif\")[2]\n",
+    "fwd_solution.sort()\n",
+    "noise_cov = files.get_files(pp_path, \"epochs-TD\", \"-cov.fif\")[2]\n",
+    "noise_cov.sort()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ix = 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "epochs = mne.read_epochs(all_epochs[ix])\n",
+    "cov = mne.read_cov(noise_cov[ix])\n",
+    "fwd = mne.read_forward_solution(fwd_solution[ix])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reg_avg = epochs[\"30\"].average(method=trim)\n",
+    "odd_avg = epochs[\"40\"].average(method=trim)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inverse_operator = mne.minimum_norm.make_inverse_operator(\n",
+    "    epochs.info,\n",
+    "    fwd,\n",
+    "    cov,\n",
+    "    loose=0.2,\n",
+    "    depth=0.8\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "diff = mne.combine_evoked([odd_avg, -reg_avg], weights=[30/140, 110/140])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "regular_epochs = mne.minimum_norm.apply_inverse(\n",
+    "    diff,\n",
+    "    inverse_operator,\n",
+    "    lambda2= 1/3**2,\n",
+    "    method=\"dSPM\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "surfer_kwargs = dict(\n",
+    "    hemi=\"both\",\n",
+    "    subjects_dir=fs_path,\n",
+    "    subject=participant,\n",
+    "    views='lateral',\n",
+    "    time_unit=\"s\",\n",
+    "    size=(800, 800),\n",
+    "    smoothing_steps=5,\n",
+    "    time_viewer=True\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "brain = regular_epochs.plot(**surfer_kwargs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "brain.add_foci(vert_n, coords_as_verts=True, hemi='lh', color='blue',\n",
+    "               scale_factor=0.6, alpha=0.5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "morph = mne.compute_source_morph(\n",
+    "    regular_epochs, \n",
+    "    subject_from=participant,\n",
+    "    subject_to=\"fsaverage\",\n",
+    "    subjects_dir=fs_path\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "diff_fsaverage = morph.apply(regular_epochs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "surfer_kwargs = dict(\n",
+    "    hemi=\"both\",\n",
+    "    subjects_dir=fs_path,\n",
+    "    subject=\"fsaverage\",\n",
+    "    views='lateral',\n",
+    "    time_unit=\"s\",\n",
+    "    size=(800, 800),\n",
+    "    smoothing_steps=5,\n",
+    "    time_viewer=True\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "diff_fsaverage.plot(**surfer_kwargs);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
